--- a/examples/nginx-fpm-socket/webserver/public/index.html
+++ b/examples/nginx-fpm-socket/webserver/public/index.html
@@ -5,7 +5,7 @@
     <title>Webfux, Example: NGINX with PHP fpm and socket on Port 80</title>
 </head>
 <body>
-<h3>NGINX with PHP fpm and socket on Port 80</h3>
+<h3>NGINX with PHP fpm and socket on Port 80 (static NGINX files)</h3>
 <ul>
     <li><a href="favicon-16x16.png" title="favicon 16x16" target="_blank">favicon 16x16</a></li>
     <li><a href="favicon-32x32.png" title="favicon 32x32" target="_blank">favicon 32x32</a></li>
